--- a/css/main.css
+++ b/css/main.css
@@ -80,9 +80,23 @@ section {
 
 .container {
   /* outline: 1px solid blue; */
-  width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .visually__hidden {
@@ -491,9 +505,11 @@ header {
   color: #757575;
   line-height: 1.7;
 }
-.features__list {
-  display: flex;
-  margin: -15px;
+@media screen and (min-width: 768px) {
+  .features__list {
+    display: flex;
+    margin: -15px;
+  }
 }
 
 .features__icon {
@@ -516,6 +532,11 @@ header {
 /* Advantages */
 .advantages {
   padding-top: 0;
+}
+@media screen and (max-width: 767px) {
+  .advantages {
+    display: none;
+  }
 }
 .advantages__list {
   display: flex;
@@ -551,8 +572,10 @@ header {
 .team {
   background-color: #f5f4fa;
 }
-.team__list {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: flex;
+  }
 }
 .team__text {
   padding: 30px 0px 30px 0px;
@@ -619,12 +642,41 @@ header {
 .clients__list {
   display: flex;
 }
+@media screen and (min-width: 480px) {
+  .clients__list {
+    margin: -15px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .clients__list {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 1140px) {
+  .clients__list {
+    margin: -15px;
+  }
+}
 
 .clients__item {
   fill: currentColor;
 }
-.clients__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 767px) {
+  .clients__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+@media screen and (max-width: px) {
+  .clients__item {
+    width: calc((100% - 60px) / 2);
+    margin: 15px;
+  }
+}
+@media screen and (max-width: 1140px) {
+  .clients__item {
+    width: calc((100% - 90px) / 3);
+    margin: 15px;
+  }
 }
 
 .clients__link {
@@ -632,7 +684,7 @@ header {
   justify-content: center;
   align-items: center;
   height: 92px;
-  width: 170px;
+  min-width: 170px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   color: #afb1b8;
