--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,6 +1,11 @@
 /* Advantages */
 
 .advantages {
+    @media screen and (max-width: 767px) {
+        display: none;
+        
+    }
+
     padding-top: 0;
 
     &__list {
