--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -2,15 +2,42 @@
 
 .clients__list {
     display: flex;
+    
     @extend %list;
+
+    @media screen and (min-width: 480px) {
+        margin: -15px;
+    }
+
+    @media screen and (max-width: 767px) {
+        flex-wrap: wrap;
+        
+    }
+
+    @media screen and (max-width: 1140px) {
+        margin: -15px;
+        
+    }
 }
 
 .clients__item {
     fill: currentColor;
 
     &:not(:last-child) {
+        @media screen and (min-width: 767px) {
             margin-right: 30px;
         }
+        }
+
+    @media screen and (max-width: px) {
+        width: calc((100% - 2 * 30px) / 2);
+        margin: 15px;
+    }
+
+    @media screen and (max-width: 1140px) {
+        width: calc((100% - 3 * 30px) / 3);
+        margin: 15px;
+    }
 }
 
 .clients__link {
@@ -18,7 +45,7 @@
     justify-content: center;
     align-items: center;
     height: 92px;
-    width: 170px;
+    min-width: 170px;
     border: 1px solid $primary-icon-color;
     border-radius: 4px;
     color: $primary-icon-color;
