--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -23,8 +23,11 @@
 
 &__list {
     @extend %list;
-    display: flex;
-    margin: -15px;
+    @media screen and (min-width: 768px) {
+            display: flex;
+            margin: -15px;
+        
+    }
 }
 
 }
