--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -5,7 +5,10 @@
 
     &__list {
             @extend %list;
+            @media screen and (min-width: 768px) {
             display: flex;
+                
+            }
         }
 
     &__text {
