--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -171,6 +171,10 @@
     @media screen and (max-width: 479px) {
         width: calc(100% - 15px * 2);
     }
+
+    @media screen and (max-width: 767px) {
+        overflow-y: scroll;
+    }
     @media screen and (min-width: 480px) and (max-width: 1199px) {
         width: 450px;
     }
