--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,8 +1,13 @@
 /* Clients */
 
 .clients__list {
-    display: flex;
-    flex-wrap: wrap;
+    @media screen and (max-width: 479px) {
+        display: block;
+    }
+    @media screen and (min-width: 480px) {
+        display: flex;
+        flex-wrap: wrap;
+    }
     @extend %list;
 
 justify-content: center;
@@ -21,6 +26,10 @@ justify-content: center;
     //     margin: -15px;
         
     // }
+
+    @media screen and (min-width: 1200px) {
+        flex-wrap: nowrap;
+    }
 }
 
 .clients__item {
@@ -44,17 +53,25 @@ justify-content: center;
     // }
 
           @media screen and (max-width: 767px) {
-              width: calc((100% - 2 * 30px) / 2);
-              margin-right: 30px;
-              margin-bottom: 30px;
-                &:nth-child(2n) {
-                        margin-right: 0;
-                    }
-                
-                    &:nth-last-child(-n + 3) {
-                        margin-bottom: 0;
-                    }
+              
 
+            &:not(:last-child) {
+                margin-bottom: 30px;
+            }
+          }
+
+          @media screen and (min-width: 480px) {
+            width: calc((100% - 2 * 30px) / 2);
+                        margin-right: 30px;
+                            margin-bottom: 30px;
+                        
+                            &:nth-child(2n) {
+                                margin-right: 0;
+                            }
+                        
+                            &:nth-last-child(-n + 3) {
+                                margin-bottom: 0;
+                            }
           }
 
                         @media screen and (min-width: 768px) {
@@ -69,6 +86,11 @@ justify-content: center;
                             &:nth-last-child(-n + 3) {
                                 margin-bottom: 0;
                             }
+}
+@media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+        margin-right: 30px;
+    }
 }
 }
 
