--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -4,7 +4,9 @@
 
 &__item {
         max-width: 450px;
-        margin-bottom: 30px;
+        &:not(:last-child) {
+            margin-bottom: 30px;
+        }
         // @media screen and (min-width: 768px) {
         //     margin: 15px;
         // }
@@ -42,6 +44,9 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     text-align: center;
+    @media screen and (min-width: 768px) {
+        text-align: left;
+    }
 }
 
 &__text {
