--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -56,6 +56,9 @@
         display: flex;
         flex-direction: column;
         margin-left: auto;
+        @media screen and (min-width: 1200px) {
+            margin-left: 93px;
+        }
         @media screen and (min-width: 768px) and (max-width: 1199px) {
             margin-right: auto;
         }
@@ -92,6 +95,7 @@
 
 
 .contact-list__item--footer {
+    margin-top: 0;
 
     &+& {
             margin-left: 0;
@@ -164,7 +168,7 @@
 
 
 .subscribe-form__input {
-    width: 358px;
+    
     padding: 15px 16px;
     background-color: $additional-background-color;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -189,6 +193,9 @@
         @media screen and (max-width: 1199px) {
             width: 100%;
             margin-bottom: 20px;
+        }
+        @media screen and (min-width: 1200px) {
+            width: 358px;
         }
 }
 
