--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -71,9 +71,7 @@
         padding-bottom: 200px;
         max-width: 1600px;
         height: 600px;
-        background-image: linear-gradient(to right,
-             rgba(47, 48, 58, 0.8),
-             rgba(47, 48, 58, 0.8)),
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url(../css/css-images/background.jpg);
         @media screen and (min-device-pixel-ratio: 2),
             screen and (min-resolution: 192dpi),
