Fix for clients section

--- a/css/main.css
+++ b/css/main.css
@@ -1104,7 +1104,7 @@ header {
     margin-bottom: 30px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .clients__item {
     width: calc((100% - 60px) / 2);
     margin-right: 30px;
