--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -60,7 +60,7 @@ justify-content: center;
             }
           }
 
-          @media screen and (min-width: 480px) {
+          @media screen and (min-width: 480px) and (max-width: 767px) {
             width: calc((100% - 2 * 30px) / 2);
                         margin-right: 30px;
                             margin-bottom: 30px;
