--- a/css/main.css
+++ b/css/main.css
@@ -487,7 +487,7 @@ header {
 .social-networks__link--header {
   font-size: 18px;
   line-height: 1.22;
-  letter-spacing: 0.3em;
+  letter-spacing: 0.02em;
   color: #2196f3;
 }
 
@@ -1085,7 +1085,7 @@ header {
     flex-wrap: wrap;
   }
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .clients__list {
     margin: -15px;
   }
@@ -1239,8 +1239,10 @@ header {
   }
 }
 
-.address-field {
-  margin-bottom: 60px;
+@media screen and (max-width: 1199px) {
+  .address-field {
+    margin-bottom: 60px;
+  }
 }
 
 .logo__span--footer {
