--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -12,7 +12,7 @@
 
 justify-content: center;
 
-    @media screen and (max-width: 1199px) {
+    @media screen and (min-width: 480px) and (max-width: 1199px) {
         margin: -15px;
     }
 
